add more stats on screen

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,12 @@ body {
   user-select: none;
   pointer-events: none;
 }
+.stats-02 {
+  top: 48px !important;
+}
+.stats-03 {
+  top: 96px !important;
+}
 
 
 code {
